Se escriben las notas que corresponde y elimina las antiguas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   </h1>
   <div>
     <app-scores [note]="piano.note" [duration]="piano.value" #scores></app-scores>
-    <app-piano #piano (notePulsed)="scores.testFunction(piano.note)"></app-piano>
+    <app-piano #piano (notePulsed)="scores.drawNote(piano.note)"></app-piano>
   </div>
 
 
