--- a/src/app/scores/scores.component.html
+++ b/src/app/scores/scores.component.html
@@ -1,3 +1,5 @@
 <p #score>
-  key pulsed: {{note}}, {{duration}}
+  <!-- key pulsed: {{note}}, {{duration}} -->
+  
 </p>
+<!-- <button (click)="addNote()"> addNote</button> -->
