3 octavas, desde F3 hasta B5

--- a/src/app/piano/piano.component.html
+++ b/src/app/piano/piano.component.html
@@ -35,7 +35,19 @@
 <!-- <app-scores [note]="note" [duration]="value" (notePulsed)="testFunction()"></app-scores> -->
 <div class="piano">
   <div class="octive" *ngFor="let o of octives; let lst = last;">
-    <span class="octive-num">{{o}}</span>
+    
+    <div class="piano" *ngIf="o==3;">
+        <span class="octive-num">{{o}}</span>
+    <div class="key" *ngFor="let key of notesOct3; " 
+    (mouseover)="msover(key+o)" 
+    (mousedown)="msdown=true;play(key+o);" 
+    (mouseup)="msdown=false" 
+    [ngClass]="{'sharp':( key.indexOf('#') >= 1)}">
+    {{key}}
+    </div>
+  </div>
+  <div class="piano" *ngIf="o!=3;">
+      <span class="octive-num">{{o}}</span>
     <div class="key" *ngFor="let key of notes; " 
         (mouseover)="msover(key+o)" 
         (mousedown)="msdown=true;play(key+o);" 
@@ -43,5 +55,6 @@
         [ngClass]="{'sharp':( key.indexOf('#') >= 1), 'last':lst}">
     {{key}}
     </div>
+  </div>
   </div>
 </div>
